--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only ./server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only ./server.ts",
+    "generate": "node --experimental-strip-types ./generate.ts"
   },
   "keywords": [],
   "author": "",
